k8s/flame/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: flame
spec:
  selector:
    matchLabels:
      app: flame
  template:
    metadata:
      labels:
        app: flame
    spec:
      nodeSelector:
        machine: bastion
      securityContext:
        fsGroup: 1000
      containers:
        - name: flame
          image: pawelmalak/flame
          ports:
            - name: http
              containerPort: 5005
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 5005
          volumeMounts:
            - mountPath: /app/data
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: flame-pvc
