k8s/flame/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flame-service
  labels:
    app: flame
spec:
  type: NodePort
  ports:
    - port: 5005
      targetPort: 5005
      protocol: TCP
  selector:
    app: flame
