k8s/flame/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flame-default-ingress
  namespace: flame
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: ""
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flame-service
            port:
              number: 5005
